@@ -19,8 +19,6 @@ SHORT-TERM (URGENT):
 
   FIX 129 <markey> Copy trackname to clipboard (ctrl-c) appears broken.
 
-  FIX 124 <muesli> Make CollectionBrowser independent of i18n.
-
   FIX 121 <markey> We should cut down on unnecessary/redundant debug output/warnings (noise).
 
   ADD 105 <markey> Make ArtsEngine depend not only on kdemultimedia-devel, but also on kdemultimedia,
